--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append(\"Malta\")\n",
+    "countries.append(\"Thailad\")\n",
     "countries"
    ]
   },
