Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,7 @@
     }
    ],
    "source": [
-    "countries.append(\"Thailand\")\n",
+    "countries.pop(\"Thailand\")\n",
     "countries"
    ]
   },
