Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,24 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Italy',\n",
-       " 'Canada',\n",
-       " 'South Korea',\n",
-       " 'Malta',\n",
-       " 'Malta',\n",
-       " 'Thailad',\n",
-       " 'Thailand']"
+       "['Croatia', 'USA', 'South Korea', 'Malta', 'Malta', 'Thailad', 'Thailand']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
