Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,22 +287,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Croatia', 'USA', 'South Korea', 'Malta', 'Malta', 'Thailad', 'Thailand']"
+       "['Croatia', 'South Korea', 'Malta', 'Malta', 'Thailad', 'Thailand']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries.pop(2)\n",
+    "countries.pop(1)\n",
     "countries"
    ]
   },
