Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,22 +287,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['South Korea', 'Malta', 'Malta', 'Thailad', 'Thailand']"
+       "'Malta'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries()"
+    "countries.pop(2)"
    ]
   },
   {
