Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,22 +287,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['South Korea', 'Malta']"
+       "['South Korea']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries.pop(2)\n",
+    "countries.pop(0)\n",
     "countries"
    ]
   },
