Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -264,16 +264,27 @@
        " 'Italy',\n",
        " 'Canada',\n",
        " 'South Korea',\n",
-       " 'Malta',\n",
        " 'Malta']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "countries = ['Croatia',\n",
+    " 'USA',\n",
+    " 'Argentina',\n",
+    " 'Mexico',\n",
+    " 'USA',\n",
+    " 'Morocco',\n",
+    " 'New Mexico',\n",
+    " 'Finland',\n",
+    " 'Argentina',\n",
+    " 'Italy',\n",
+    " 'Canada',\n",
+    " 'South Korea']\n",
     "countries.append(\"Malta\")\n",
     "countries"
    ]
