Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -469,7 +469,7 @@
     }
    ],
    "source": [
-    "set.unique_countries = list.countries"
+    "unique_countries = list.countries"
    ]
   },
   {
