--- a/index.ipynb
+++ b/index.ipynb
@@ -453,11 +453,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = set(countries)\n",
+    "unique_countries"
    ]
   },
   {
